docs/ideas/pechka-old/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pechka-ingress
  namespace: pechka
  annotations:
    cert-manager.io/cluster-issuer: "ca-clusterissuer"
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - file-server.nuage.cluster.wpc
    - workflow.nuage.cluster.wpc
    secretName: pechka-tls-secret
  rules:
  - host: file-server.nuage.cluster.wpc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: file-server-ui
            port:
              number: 80
  - host: workflow.nuage.cluster.wpc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-server
            port:
              number: 2746
